--- a/style.css
+++ b/style.css
@@ -1,23 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Honk&family=Workbench&display=swap');
 
+
+body {
+  margin: 0;
+}
+
 #left_header {
-	border: 0.4vh solid black;
+	border: 0.25vw solid black;
 	background-color: #772ce8;
-	width: 3.5%;
-	height: 3.5vw;
-	margin-bottom: 2vh;
+	width: 3%;
+	height: 3vw;
 	float: left;
 	z-index: 2;
 	display: block;
 }
 
 #header {
- border: 0.4vh solid black;
+ border: 0.25vw solid black;
  	border-left: none;
-	width: 95.3%;
-	height: 3.5vw;
+	width: 96.25%;
+	height: 3vw;
 	background-color: #772ce8;
-	margin-bottom: 2vh;
 	float: left;
 	z-index: 3;
 	display: block;
@@ -27,8 +30,6 @@
 	color: #772ce8;
 	background-color: #c8c8d0;
 	width: 100vw;
-	margin-top: 0vh;
-	margin-bottom: 3vh;
 	float: left;
 	z-index: 1;
 	display: block;
@@ -40,3 +41,4 @@
 	font-family: 'Honk', system-ui;
 	text-align: center;
 }
+
